data/derived/comb/progs/unify/prog8412.ml.out
Characters 111-119:
  | [] -> [(b/10)]::[b mod 10]
                     ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
